# mman-win32

./: .coveralls.yml  .gitignore  .travis.yml  .vimrc_local  CMakeLists.txt  README.md  mman.pc.cmakein  test.c
cmake/: mingw-x64.cmake  mingw-x86.cmake
